--- a/core/linux-imx6-wandboard-dt/config
+++ b/core/linux-imx6-wandboard-dt/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.14.41-1 Kernel Configuration
+# Linux/arm 3.14.48 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_MIGHT_HAVE_PCI=y
@@ -9,7 +9,7 @@ CONFIG_HAVE_PROC_CPU=y
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
@@ -365,6 +365,7 @@ CONFIG_ARCH_MXC=y
 # Freescale i.MX support
 #
 CONFIG_MXC_DEBUG_BOARD=y
+CONFIG_HAVE_IMX_RNG=y
 CONFIG_HAVE_IMX_ANATOP=y
 CONFIG_HAVE_IMX_GPC=y
 CONFIG_HAVE_IMX_MMDC=y
@@ -382,8 +383,10 @@ CONFIG_HAVE_IMX_SRC=y
 #
 # CONFIG_SOC_IMX50 is not set
 # CONFIG_SOC_IMX53 is not set
+CONFIG_SOC_IMX6=y
 CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX6SL=y
+# CONFIG_SOC_IMX6SX is not set
 # CONFIG_SOC_VF610 is not set
 # CONFIG_ARCH_OMAP3 is not set
 # CONFIG_ARCH_OMAP4 is not set
@@ -457,8 +460,6 @@ CONFIG_ARM_ERRATA_764369=y
 CONFIG_ARM_ERRATA_775420=y
 # CONFIG_ARM_ERRATA_798181 is not set
 # CONFIG_ARM_ERRATA_773022 is not set
-CONFIG_ARM_ERRATA_794072=y
-CONFIG_ARM_ERRATA_761320=y
 
 #
 # Bus support
@@ -482,6 +483,7 @@ CONFIG_PCIE_DW=y
 CONFIG_PCI_IMX6=y
 # CONFIG_EP_MODE_IN_EP_RC_SYS is not set
 # CONFIG_RC_MODE_IN_EP_RC_SYS is not set
+# CONFIG_PCI_HOST_GENERIC is not set
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCIEAER=y
 CONFIG_PCIE_ECRC=y
@@ -575,6 +577,7 @@ CONFIG_CLEANCACHE=y
 CONFIG_FRONTSWAP=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
+# CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 CONFIG_ZBUD=y
 CONFIG_ZSWAP=y
@@ -621,8 +624,8 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -634,7 +637,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 #
 # ARM CPU frequency scaling drivers
 #
-CONFIG_ARM_IMX6_CPUFREQ=y
+CONFIG_ARM_IMX6Q_CPUFREQ=y
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 
 #
@@ -693,7 +696,11 @@ CONFIG_PM_SLEEP_DEBUG=y
 CONFIG_ARCH_HAS_OPP=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
+CONFIG_PM_GENERIC_DOMAINS=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
+CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
+CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
@@ -1456,7 +1463,6 @@ CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 CONFIG_DEBUG_DEVRES=y
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
-# CONFIG_HAVE_CPU_AUTOPROBE is not set
 CONFIG_SOC_BUS=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
@@ -1691,11 +1697,9 @@ CONFIG_ATA_BMDMA=y
 # SATA SFF controllers with BMDMA
 #
 CONFIG_ATA_PIIX=y
-# CONFIG_SATA_HIGHBANK is not set
 CONFIG_SATA_MV=m
 CONFIG_SATA_NV=m
 CONFIG_SATA_PROMISE=m
-CONFIG_SATA_RCAR=m
 CONFIG_SATA_SIL=m
 CONFIG_SATA_SIS=m
 CONFIG_SATA_SVW=m
@@ -1708,14 +1712,10 @@ CONFIG_SATA_VITESSE=m
 #
 CONFIG_PATA_ALI=m
 CONFIG_PATA_AMD=m
-CONFIG_PATA_ARASAN_CF=m
 CONFIG_PATA_ARTOP=m
 CONFIG_PATA_ATIIXP=m
 CONFIG_PATA_ATP867X=m
 CONFIG_PATA_CMD64X=m
-CONFIG_PATA_CS5520=m
-CONFIG_PATA_CS5530=m
-CONFIG_PATA_CS5536=m
 CONFIG_PATA_CYPRESS=m
 CONFIG_PATA_EFAR=m
 CONFIG_PATA_HPT366=m
@@ -1737,7 +1737,6 @@ CONFIG_PATA_PDC2027X=m
 CONFIG_PATA_PDC_OLD=m
 # CONFIG_PATA_RADISYS is not set
 CONFIG_PATA_RDC=m
-# CONFIG_PATA_SC1200 is not set
 CONFIG_PATA_SCH=m
 CONFIG_PATA_SERVERWORKS=m
 CONFIG_PATA_SIL680=m
@@ -2234,8 +2233,10 @@ CONFIG_B43LEGACY_DMA_AND_PIO_MODE=y
 CONFIG_BRCMUTIL=m
 CONFIG_BRCMSMAC=m
 CONFIG_BRCMFMAC=m
+CONFIG_BRCMFMAC_PROTO_BCDC=y
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_BRCMFMAC_USB=y
+# CONFIG_BRCMFMAC_PCIE is not set
 # CONFIG_BRCM_TRACING is not set
 # CONFIG_BRCMDBG is not set
 # CONFIG_HOSTAP is not set
@@ -2572,6 +2573,7 @@ CONFIG_TOUCHSCREEN_DYNAPRO=m
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 CONFIG_TOUCHSCREEN_EETI=m
 CONFIG_TOUCHSCREEN_EGALAX=m
+# CONFIG_TOUCHSCREEN_ELAN is not set
 CONFIG_TOUCHSCREEN_FUJITSU=m
 CONFIG_TOUCHSCREEN_ILI210X=m
 CONFIG_TOUCHSCREEN_GUNZE=m
@@ -2643,6 +2645,7 @@ CONFIG_INPUT_GPIO_ROTARY_ENCODER=m
 # CONFIG_INPUT_IMS_PCU is not set
 CONFIG_INPUT_CMA3000=m
 CONFIG_INPUT_CMA3000_I2C=m
+# CONFIG_INPUT_ISL29023 is not set
 
 #
 # Hardware I/O ports
@@ -2739,6 +2742,7 @@ CONFIG_SERIAL_FSL_LPUART_CONSOLE=y
 # CONFIG_SERIAL_ST_ASC is not set
 # CONFIG_TTY_PRINTK is not set
 CONFIG_FSL_OTP=y
+# CONFIG_FSL_OTP_WRITE_ENABLE is not set
 CONFIG_PRINTER=m
 CONFIG_LP_CONSOLE=y
 CONFIG_PPDEV=m
@@ -2755,6 +2759,7 @@ CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_TIMERIOMEM=m
 # CONFIG_HW_RANDOM_ATMEL is not set
 CONFIG_HW_RANDOM_VIRTIO=m
+# CONFIG_HW_RANDOM_IMX_RNG is not set
 # CONFIG_HW_RANDOM_EXYNOS is not set
 CONFIG_HW_RANDOM_TPM=m
 # CONFIG_NVRAM is not set
@@ -3046,6 +3051,7 @@ CONFIG_CHARGER_SMB347=m
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_RESTART is not set
+CONFIG_POWER_RESET_SNVS=y
 # CONFIG_POWER_AVS is not set
 CONFIG_HWMON=y
 CONFIG_HWMON_VID=m
@@ -3117,6 +3123,7 @@ CONFIG_SENSORS_LM95245=m
 CONFIG_SENSORS_MAX16065=m
 CONFIG_SENSORS_MAX1619=m
 CONFIG_SENSORS_MAX1668=m
+# CONFIG_SENSORS_MAX17135 is not set
 CONFIG_SENSORS_MAX197=m
 CONFIG_SENSORS_MAX6639=m
 CONFIG_SENSORS_MAX6642=m
@@ -3274,6 +3281,7 @@ CONFIG_MFD_DA9052_I2C=y
 # CONFIG_MFD_DA9055 is not set
 # CONFIG_MFD_DA9063 is not set
 CONFIG_MFD_MXC_HDMI=y
+# CONFIG_MFD_MXC_HDMI_ANDROID is not set
 CONFIG_MFD_MC13XXX=y
 CONFIG_MFD_MC13XXX_SPI=y
 CONFIG_MFD_MC13XXX_I2C=y
@@ -3287,6 +3295,7 @@ CONFIG_MFD_MC13XXX_I2C=y
 # CONFIG_MFD_88PM800 is not set
 # CONFIG_MFD_88PM805 is not set
 # CONFIG_MFD_88PM860X is not set
+# CONFIG_MFD_MAX17135 is not set
 # CONFIG_MFD_MAX14577 is not set
 # CONFIG_MFD_MAX77686 is not set
 # CONFIG_MFD_MAX77693 is not set
@@ -3643,7 +3652,9 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_CAFE_CCIC=m
 # CONFIG_VIDEO_TIMBERDALE is not set
 CONFIG_VIDEO_MXC_OUTPUT=y
+# CONFIG_VIDEO_MXC_CAPTURE is not set
 CONFIG_VIDEO_MXC_IPU_OUTPUT=y
+# CONFIG_VIDEO_MXC_PXP_V4L2 is not set
 CONFIG_SOC_CAMERA=y
 # CONFIG_SOC_CAMERA_PLATFORM is not set
 # CONFIG_VIDEO_MX3 is not set
@@ -3941,6 +3952,11 @@ CONFIG_DVB_AF9033=m
 #
 CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
+
+#
+# Vivante GPU support
+#
+# CONFIG_VIVANTE_GALCORE is not set
 CONFIG_DRM=y
 # CONFIG_DRM_TDFX is not set
 # CONFIG_DRM_R128 is not set
@@ -3964,6 +3980,7 @@ CONFIG_DRM_VIVANTE=y
 # CONFIG_DRM_BOCHS is not set
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=m
+CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_HDMI=y
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
@@ -3990,7 +4007,6 @@ CONFIG_FB_MODE_HELPERS=y
 #
 # CONFIG_FB_CIRRUS is not set
 # CONFIG_FB_PM2 is not set
-# CONFIG_FB_ARMHDLCD is not set
 # CONFIG_FB_IMX is not set
 # CONFIG_FB_CYBER2000 is not set
 # CONFIG_FB_ASILIANT is not set
@@ -4023,11 +4039,13 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_UDL is not set
 # CONFIG_FB_GOLDFISH is not set
 # CONFIG_FB_VIRTUAL is not set
+# CONFIG_FB_VIRTUAL_PHYMEM is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_MB862XX is not set
 # CONFIG_FB_MX3 is not set
 # CONFIG_FB_BROADSHEET is not set
 # CONFIG_FB_AUO_K190X is not set
+# CONFIG_FB_MXS is not set
 # CONFIG_FB_SIMPLE is not set
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -4063,6 +4081,9 @@ CONFIG_FB_MXC_LDB=y
 # CONFIG_FB_MXC_MIPI_DSI is not set
 CONFIG_FB_MXC_HDMI=y
 CONFIG_FB_MXC_EDID=y
+# CONFIG_FB_MXC_EINK_PANEL is not set
+CONFIG_FB_MXC_DCIC=m
+# CONFIG_HANNSTAR_CABC is not set
 
 #
 # Console display driver support
@@ -4236,21 +4257,38 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_GENERIC_DMAENGINE_PCM=y
 # CONFIG_SND_ATMEL_SOC is not set
 # CONFIG_SND_DESIGNWARE_I2S is not set
+
+#
+# SoC Audio for Freescale CPUs
+#
+
+#
+# Common SoC Audio options for Freescale CPUs:
+#
+CONFIG_SND_SOC_FSL_ASRC=y
+CONFIG_SND_SOC_FSL_SAI=y
 CONFIG_SND_SOC_FSL_SSI=y
 CONFIG_SND_SOC_FSL_SPDIF=y
-CONFIG_SND_SOC_FSL_ASRC=y
+# CONFIG_SND_SOC_FSL_ESAI is not set
 CONFIG_SND_SOC_FSL_HDMI=y
-CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_PCM_DMA=y
-CONFIG_SND_SOC_IMX_HDMI_DMA=y
 CONFIG_SND_SOC_IMX_AUDMUX=y
+CONFIG_SND_IMX_SOC=y
+CONFIG_SND_SOC_IMX_HDMI_DMA=y
+
+#
+# SoC Audio support for Freescale i.MX boards:
+#
 # CONFIG_SND_SOC_IMX_CS42888 is not set
 # CONFIG_SND_SOC_IMX_WM8962 is not set
 CONFIG_SND_SOC_IMX_SGTL5000=y
+# CONFIG_SND_SOC_IMX_MQS is not set
 CONFIG_SND_SOC_IMX_SPDIF=y
-CONFIG_SND_SOC_IMX_HDMI=y
 # CONFIG_SND_SOC_IMX_MC13783 is not set
+CONFIG_SND_SOC_IMX_HDMI=y
+# CONFIG_SND_SOC_IMX_SI476X is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
+# CONFIG_SND_SOC_CS42XX8_I2C is not set
 CONFIG_SND_SOC_HDMI_CODEC=y
 CONFIG_SND_SOC_SGTL5000=y
 # CONFIG_SND_SIMPLE_CARD is not set
@@ -4373,6 +4411,7 @@ CONFIG_USB_DEFAULT_PERSIST=y
 # CONFIG_USB_OTG is not set
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
+# CONFIG_USB_OTG_FSM is not set
 CONFIG_USB_MON=m
 CONFIG_USB_WUSB=m
 CONFIG_USB_WUSB_CBAF=m
@@ -4388,7 +4427,6 @@ CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 CONFIG_USB_EHCI_PCI=y
 # CONFIG_USB_EHCI_MXC is not set
-# CONFIG_USB_EHCI_HCD_SYNOPSYS is not set
 # CONFIG_USB_EHCI_HCD_PLATFORM is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
@@ -4568,7 +4606,6 @@ CONFIG_USB_XUSBATM=m
 # USB Physical Layer drivers
 #
 CONFIG_USB_PHY=y
-# CONFIG_USB_OTG_FSM is not set
 CONFIG_NOP_USB_XCEIV=y
 # CONFIG_AM335X_PHY_USB is not set
 # CONFIG_SAMSUNG_USB2PHY is not set
@@ -4702,14 +4739,7 @@ CONFIG_MXC_IPU=y
 # MXC Vivante GPU support
 #
 CONFIG_MXC_GPU_VIV=y
-# CONFIG_MXC_GPU_VIV_V5 is not set
-CONFIG_MXC_GPU_VIV_V4=y
 CONFIG_MXC_IPU_V3=y
-
-#
-# MXC Asynchronous Sample Rate Converter support
-#
-CONFIG_MXC_ASRC=y
 
 #
 # MXC VPU(Video Processing Unit) support
@@ -5189,6 +5219,7 @@ CONFIG_IIO_ST_ACCEL_SPI_3AXIS=m
 # CONFIG_MCP3422 is not set
 # CONFIG_NAU7802 is not set
 # CONFIG_TI_ADC081C is not set
+# CONFIG_VF610_ADC is not set
 # CONFIG_VIPERBOARD_ADC is not set
 
 #
@@ -5494,25 +5525,6 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=y
-CONFIG_AUFS_FS=y
-CONFIG_AUFS_BRANCH_MAX_127=y
-# CONFIG_AUFS_BRANCH_MAX_511 is not set
-# CONFIG_AUFS_BRANCH_MAX_1023 is not set
-# CONFIG_AUFS_BRANCH_MAX_32767 is not set
-CONFIG_AUFS_SBILIST=y
-CONFIG_AUFS_HNOTIFY=y
-CONFIG_AUFS_HFSNOTIFY=y
-CONFIG_AUFS_EXPORT=y
-CONFIG_AUFS_XATTR=y
-# CONFIG_AUFS_FHSM is not set
-CONFIG_AUFS_RDU=y
-CONFIG_AUFS_SHWH=y
-CONFIG_AUFS_BR_RAMFS=y
-CONFIG_AUFS_BR_FUSE=y
-CONFIG_AUFS_POLL=y
-CONFIG_AUFS_BR_HFSPLUS=y
-CONFIG_AUFS_BDEV_LOOP=y
-# CONFIG_AUFS_DEBUG is not set
 CONFIG_ORE=m
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_NFS_FS=y
@@ -5937,6 +5949,7 @@ CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_HIFN_795X=m
 CONFIG_CRYPTO_DEV_HIFN_795X_RNG=y
 CONFIG_CRYPTO_DEV_FSL_CAAM=m
+CONFIG_CRYPTO_DEV_FSL_CAAM_JR=m
 CONFIG_CRYPTO_DEV_FSL_CAAM_RINGSIZE=9
 CONFIG_CRYPTO_DEV_FSL_CAAM_INTC=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_INTC_COUNT_THLD=255
@@ -5947,6 +5960,7 @@ CONFIG_CRYPTO_DEV_FSL_CAAM_RNG_API=m
 # CONFIG_CRYPTO_DEV_FSL_CAAM_RNG_TEST is not set
 # CONFIG_CRYPTO_DEV_FSL_CAAM_SM is not set
 # CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO is not set
+# CONFIG_CRYPTO_DEV_FSL_CAAM_DEBUG is not set
 # CONFIG_CRYPTO_DEV_SAHARA is not set
 # CONFIG_ASYMMETRIC_KEY_TYPE is not set
 # CONFIG_BINARY_PRINTF is not set
