--- a/core/linux-imx6-wandboard-dt/PKGBUILD
+++ b/core/linux-imx6-wandboard-dt/PKGBUILD
@@ -11,7 +11,7 @@ buildarch=4
 pkgbase=linux-imx6-wandboard-dt
 pkgname=('linux-imx6-wandboard-dt' 'linux-headers-imx6-wandboard-dt')
 # pkgname=linux-custom       # Build kernel with a different name
-_commit=e608526f89f979dc15b083319fdf5ef7cfef5503
+_commit=e9362bbb3a4cfcde52b1e09695f5f800f92d24c3
 _srcname=linux-fslc-${_commit}
 _kernelname=${pkgname#linux}
 _basekernel=3.14
@@ -25,30 +25,23 @@ url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'uboot-mkimage' 'git' 'lzop')
 options=('!strip')
-source=("linux-${_commit}::https://github.com/SolidRun/linux-fslc/archive/${_commit}.tar.gz"
+source=("linux-${_commit}::https://github.com/Crawx/linux-fslc/archive/${_commit}.tar.gz"
         "cryptodev-${cryptodev_commit}.tar.gz::https://github.com/cryptodev-linux/cryptodev-linux/archive/${cryptodev_commit}.tar.gz"
-        "git://git.code.sf.net/p/aufs/aufs3-standalone#branch=aufs${pkgver:0:4}.40+"
+#        "git://git.code.sf.net/p/aufs/aufs3-standalone#branch=aufs${pkgver:0:4}.40+"
         '0001-Bluetooth-allocate-static-minor-for-vhci.patch'
-        "ftp://teambelgium.net/bfq/patches/${pkgver:0:4}.0-${bfqver}/0001-block-cgroups-kconfig-build-bits-for-BFQ-${bfqver}-${pkgver:0:4}.patch"
-        "ftp://teambelgium.net/bfq/patches/${pkgver:0:4}.0-${bfqver}/0002-block-introduce-the-BFQ-${bfqver}-I-O-sched-for-${pkgver:0:4}.patch"
-        "ftp://teambelgium.net/bfq/patches/${pkgver:0:4}.0-${bfqver}/0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-${bfqver}-for-${pkgver:0:4}.0.patch"
+#        "ftp://teambelgium.net/bfq/patches/${pkgver:0:4}.0-${bfqver}/0001-block-cgroups-kconfig-build-bits-for-BFQ-${bfqver}-${pkgver:0:4}.patch"
+#        "ftp://teambelgium.net/bfq/patches/${pkgver:0:4}.0-${bfqver}/0002-block-introduce-the-BFQ-${bfqver}-I-O-sched-for-${pkgver:0:4}.patch"
+#        "ftp://teambelgium.net/bfq/patches/${pkgver:0:4}.0-${bfqver}/0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-${bfqver}-for-${pkgver:0:4}.0.patch"
         'config'
-        '001_cec.patch'
-        '002_cec.patch'
-        '003_cec.patch')
+#        '001_cec.patch'
+#        '002_cec.patch'
+#        '003_cec.patch')
+)
 
-md5sums=('9c9fa71dbf209f74314cd6745c9f721e'
+md5sums=('a2400521c04666ae7c8ac295763adcbc'
          '8fb4d3b7cc970351f3b5078b7893a107'
-         'SKIP'
          '1b276abe16d14e133f3f28d9c9e6bd68'
-         'defe6b5df33f8c11c2bf45f67ad35d8d'
-         '2c10ccc1169884d2f12ba95fe11d29fd'
-         '3baee38bf7fdcd47b2cc9628949b5784'
-         'b4673e6bb1bf23a0d578c8e191430793'
-         '8bf79a580704e8dab806f58043720a90'
-         '6391a74bf1d451b74df6f189a25cf642'
-         'a70798b63a0e7c3fb50a57ea1815d353')
-
+         '8dd1abdc0c70cf932b7e4c15d7118688')
 
 prepare() {
   cd "${srcdir}/${_srcname}"
@@ -56,25 +49,25 @@ prepare() {
   msg2 "Fix hci_vhci no minor warning"
   patch -Np1 -i ${srcdir}/0001-Bluetooth-allocate-static-minor-for-vhci.patch
 
-  msg2 "Copying aufs3 patches into the kernel source tree"
-  cp -ru "${srcdir}/aufs3-standalone/"{Documentation,fs} "${srcdir}/${_srcname}/"
-  cp -ru "${srcdir}/aufs3-standalone/include/uapi/linux/aufs_type.h" "${srcdir}/${_srcname}/include/"{linux/,uapi/linux/}
+#  msg2 "Copying aufs3 patches into the kernel source tree"
+#  cp -ru "${srcdir}/aufs3-standalone/"{Documentation,fs} "${srcdir}/${_srcname}/"
+#  cp -ru "${srcdir}/aufs3-standalone/include/uapi/linux/aufs_type.h" "${srcdir}/${_srcname}/include/"{linux/,uapi/linux/}
 
-  msg2 "Applying aufs3 patches"
-  patch -Np1 -i ../aufs3-standalone/aufs3-kbuild.patch
-  patch -Np1 -i ../aufs3-standalone/aufs3-base.patch
-  patch -Np1 -i ../aufs3-standalone/aufs3-mmap.patch
-  patch -Np1 -i ../aufs3-standalone/aufs3-standalone.patch
+#  msg2 "Applying aufs3 patches"
+#  patch -Np1 -i ../aufs3-standalone/aufs3-kbuild.patch
+#  patch -Np1 -i ../aufs3-standalone/aufs3-base.patch
+#  patch -Np1 -i ../aufs3-standalone/aufs3-mmap.patch
+#  patch -Np1 -i ../aufs3-standalone/aufs3-standalone.patch
 
-  msg2 "Add BFQ patches"
-  patch -Np1 -i "${srcdir}/0001-block-cgroups-kconfig-build-bits-for-BFQ-${bfqver}-${pkgver:0:4}.patch"
-  patch -Np1 -i "${srcdir}/0002-block-introduce-the-BFQ-${bfqver}-I-O-sched-for-${pkgver:0:4}.patch"
-  patch -Np1 -i "${srcdir}/0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-${bfqver}-for-${pkgver:0:4}.0.patch"  
+#  msg2 "Add BFQ patches"
+#  patch -Np1 -i "${srcdir}/0001-block-cgroups-kconfig-build-bits-for-BFQ-${bfqver}-${pkgver:0:4}.patch"
+#  patch -Np1 -i "${srcdir}/0002-block-introduce-the-BFQ-${bfqver}-I-O-sched-for-${pkgver:0:4}.patch"
+#  patch -Np1 -i "${srcdir}/0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-${bfqver}-for-${pkgver:0:4}.0.patch"  
 
-  msg2 "CEC patches"
-  patch -Np1 -i ${srcdir}/001_cec.patch
-  patch -Np1 -i ${srcdir}/002_cec.patch
-  patch -Np1 -i ${srcdir}/003_cec.patch
+#  msg2 "CEC patches"
+#  patch -Np1 -i ${srcdir}/001_cec.patch
+#  patch -Np1 -i ${srcdir}/002_cec.patch
+#  patch -Np1 -i ${srcdir}/003_cec.patch
 
   cat "${srcdir}/config" > ./.config
   cp "${srcdir}/config" "${srcdir}/${_srcname}/.config"
@@ -141,7 +134,8 @@ package_linux-imx6-wandboard-dt() {
   mkdir -p "${pkgdir}"/{lib/modules,lib/firmware,boot}
   make INSTALL_MOD_PATH="${pkgdir}" modules_install
   cp arch/$KARCH/boot/zImage "${pkgdir}/boot/zImage"
-  cp arch/$KARCH/boot/dts/*.dtb "${pkgdir}/boot"
+  mkdir -p "${pkgdir}/boot/dtbs"
+  cp arch/$KARCH/boot/dts/*.dtb "${pkgdir}/boot/dtbs"
 
 
   # set correct depmod command for install
